--- a/cupcake_site/templates/signup.html
+++ b/cupcake_site/templates/signup.html
@@ -37,7 +37,8 @@
 
             <div class="form-group">
                 <i class="fa-solid fa-envelope"></i>
-                <input type="email" name="email" placeholder="Email Address" required>
+                <input type="text" name="phone" placeholder="Phone Number" required>
+
             </div>
 
             <div class="form-group">
@@ -56,10 +57,13 @@
 
         </form>
 
-        <div class="extra-links">
-            Already have an account?
-            <a href="#">Login</a>
+        <div>
+            <p>
+                Already have an account?
+                <a href="{% url 'login' %}">Login</a>
+           </p>
         </div>
+
 
     </div>
 </div>
